[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = "true"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", ".tox", ".venv"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-x",
    "--color=yes",
    "--cov-report=term-missing",
    "--cov=gflownet",
    "--typeguard-packages=ml_kit,tests"
]
testpaths = ["tests"]
pythonpath = "src/"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = false
strict_optional = false
implicit_reexport = true
allow_redefinition = true
files = "src"

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_incomplete_defs = true

[tool.isort]
profile = "black"
py_version = "auto"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py311"]

[project]
name = "gflownet"
readme = "README.md"
classifiers = ["Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3"]
keywords = ["gflownet"]
requires-python = ">=3.8,<3.10"
dynamic = ["version"]
dependencies = [
    "torch==1.10.2",
    # These pins are specific on purpose, some of these packages have
    # unstable APIs since they are fairly new. We could instead pin
    # them as >= in dev until something breaks?
    "torch-geometric==2.0.3",
    "torch-scatter==2.0.9",
    "torch-sparse==0.6.13",
    "torch-cluster==1.6.0",
    "rdkit",
    "tables",
    "scipy",
    "networkx",
    "tensorboard",
    "cvxopt",
    "pyarrow",
    "botorch==0.6.6",  # pin because of the torch==1.10.2 dependency, botorch>=0.7 requires torch>=1.11
    # pins to help depencency resolution, because of the above pin
    "pyro-ppl==1.8.0",
    "gpytorch==1.8.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "black",
    "isort",
    "mypy",
    "pip-compile-multi",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "typeguard",
    "types-pkg_resources",
    # Security pin
    "gitpython>=3.1.30",
]

[[project.authors]]
name = "Recursion Pharmaceuticals"
email = "devs@recursionpharma.com"

[tool.ruff]
line-length = 120
