[metadata]
name = gflownet
description = GFlowNet related training and environment code
url = https://github.com/recursionpharma/gflownet
author = Recursion Pharmaceuticals
author_email = devs@recursionpharma.com
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
keywords = gflownet
license = MIT

[options]
python_requires > = 3.6

[flake8]
max-line-length = 120
exclude = build, tests, conda.recipe, benchmarks, .asv, .git, venv, migrations/versions, .tox
max-complexity = 20
