[metadata]
name = gflownet
description = GFlowNet related training and environment code
url = https://github.com/recursionpharma/gflownet
author = Recursion Pharmaceuticals
author_email = devs@recursionpharma.com
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
keywords = gflownet
license = MIT
version = 0.0.10

[options]
dependency_links = https://data.pyg.org/whl/torch-1.10.0+cu113.html
python_requires = >=3.8
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
exclude = tests

[flake8]
max-line-length = 120
exclude = build, tests, conda.recipe, benchmarks, .asv, .git, venv, migrations/versions, .tox
max-complexity = 20
