[metadata]
name = {{cookiecutter.python_name}}
description = {{cookiecutter.description}}
url = https://github.com/recursionpharma/roadie
version = set_version_placeholder
author = Recursion Pharmaceuticals
author_email = devs@recursionpharma.com
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
keywords = '{{cookiecutter.python_name}}'

[options]
python_requires > = 3.6

[flake8]
{{cookiecutter.flake8}}

[yapf]
{{cookiecutter.yapf}}

[bdist_wheel]
universal = True

[tool:pytest]
addopts =
        -v
        -x
        --color=yes
        --cov-report term-missing
        --cov={{cookiecutter.python_name}}
testpaths =
	tests

[mypy]
files = {{cookiecutter.python_name}}
